--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-indexer</artifactId>
-			<scope>optional</scope>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
