--- a/spring-boot-benchmark-original/pom.xml
+++ b/spring-boot-benchmark-original/pom.xml
@@ -6,14 +6,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.2.5.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>miller79</groupId>
-	<artifactId>spring-boot-benchmark</artifactId>
+	<artifactId>spring-boot-benchmark-original</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Spring Boot Benchmark</name>
-	<description>Spring Boot Benchmarking Project</description>
 
 	<properties>
 		<java.version>11</java.version>
