Cleaned up strange characters in application.yml.

--- a/spring-boot-benchmark-data-jpa/src/main/resources/application.yml
+++ b/spring-boot-benchmark-data-jpa/src/main/resources/application.yml
@@ -1,3 +1,5 @@
 spring:
-  main:    lazy-initialization: true
-  data:    jpa:      repositories:        bootstrap-mode: lazy
+  main:
+    lazy-initialization: true
+  data:    jpa:
+      repositories:        bootstrap-mode: lazy
