More character cleanup.

--- a/spring-boot-benchmark-data-jpa/src/main/resources/application.yml
+++ b/spring-boot-benchmark-data-jpa/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
   main:
     lazy-initialization: true
-  data:    jpa:
-      repositories:        bootstrap-mode: lazy
+  data:
+    jpa:
+      repositories:
+        bootstrap-mode: lazy
