Fixing health endpoints

--- a/spring-boot-benchmark-all/src/main/resources/application.yml
+++ b/spring-boot-benchmark-all/src/main/resources/application.yml
@@ -5,3 +5,12 @@ spring:
     jpa:
       repositories:
         bootstrap-mode: lazy
+
+management:
+  health:
+    jms:
+      enabled: false
+      
+health:
+  config:
+    enabled: false
