--- a/spring-boot-benchmark-tomcat/pom.xml
+++ b/spring-boot-benchmark-tomcat/pom.xml
@@ -6,15 +6,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
+		<version>2.5.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>miller79</groupId>
 	<artifactId>spring-boot-benchmark-tomcat</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${revision}</version>
 
 	<properties>
 		<java.version>11</java.version>
+		<revision>LOCAL-SNAPSHOT</revision>
 	</properties>
 
 	<dependencies>
@@ -25,11 +26,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-indexer</artifactId>
-			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
