--- a/spring-boot-benchmark-camel-activemq/pom.xml
+++ b/spring-boot-benchmark-camel-activemq/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.6</version>
+		<version>3.3.1</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>miller79</groupId>
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<revision>LOCAL-SNAPSHOT</revision>
+		<camel.version>4.6.0</camel.version>
 	</properties>
 
 	<dependencies>
@@ -38,21 +39,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<layers>
-						<enabled>true</enabled>
-					</layers>
-					<additionalProperties>
-						<description>${project.description}</description>
-					</additionalProperties>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>build-info</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -61,8 +47,8 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.apache.camel.springboot</groupId>
-				<artifactId>camel-spring-boot-dependencies</artifactId>
-				<version>3.11.3</version>
+				<artifactId>camel-spring-boot-bom</artifactId>
+				<version>${camel.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
