--- a/spring-boot-benchmark-camel-activemq/pom.xml
+++ b/spring-boot-benchmark-camel-activemq/pom.xml
@@ -29,8 +29,18 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-activemq-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.activemq</groupId>
+					<artifactId>activemq-client-jakarta</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
