Updated to add aot-aot-caching option

--- a/spring-boot-benchmark-parent/pom.xml
+++ b/spring-boot-benchmark-parent/pom.xml
@@ -110,29 +110,94 @@
                             <groupId>org.springframework.boot</groupId>
                             <artifactId>spring-boot-maven-plugin</artifactId>
                             <configuration>
-                            <imageBuilder>paketobuildpacks/builder-noble-java-tiny:latest</imageBuilder>
-                            <image>
-                                <env>
-                                    <BP_JVM_VERSION>25</BP_JVM_VERSION>
-                                    <BP_JVM_AOTCACHE_ENABLED>true</BP_JVM_AOTCACHE_ENABLED>
-                                    <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
-                                    <JAVA_TOOL_OPTIONS>-XX:+UseCompactObjectHeaders</JAVA_TOOL_OPTIONS>
-                                    <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
-                                    <BPE_APPEND_JAVA_TOOL_OPTIONS>-XX:+UseCompactObjectHeaders</BPE_APPEND_JAVA_TOOL_OPTIONS>
-                                </env>
-                                <buildpacks>
-                                    <buildpack>urn:cnb:builder:paketo-buildpacks/ca-certificates</buildpack>
-                                    <buildpack>urn:cnb:builder:paketo-buildpacks/bellsoft-liberica</buildpack>
-                                    <buildpack>urn:cnb:builder:paketo-buildpacks/syft</buildpack>
-                                    <buildpack>urn:cnb:builder:paketo-buildpacks/executable-jar</buildpack>
-                                    <buildpack>paketobuildpacks/spring-boot:anthony-pr-571</buildpack>
-                                    <buildpack>urn:cnb:builder:paketo-buildpacks/environment-variables</buildpack>
-                                </buildpacks>
-                            </image>
-                            <layers>
-                                <enabled>true</enabled>
-                            </layers>
-                        </configuration>
+                                <imageBuilder>
+                                    paketobuildpacks/builder-noble-java-tiny:latest</imageBuilder>
+                                <image>
+                                    <env>
+                                        <BP_JVM_VERSION>25</BP_JVM_VERSION>
+                                        <BP_JVM_AOTCACHE_ENABLED>true</BP_JVM_AOTCACHE_ENABLED>
+                                        <BP_SPRING_AOT_ENABLED>false</BP_SPRING_AOT_ENABLED>
+                                        <JAVA_TOOL_OPTIONS>
+                                            -XX:+UseCompactObjectHeaders</JAVA_TOOL_OPTIONS>
+                                        <BPE_DELIM_JAVA_TOOL_OPTIONS
+                                            xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
+                                        <BPE_APPEND_JAVA_TOOL_OPTIONS>
+                                            -XX:+UseCompactObjectHeaders</BPE_APPEND_JAVA_TOOL_OPTIONS>
+                                    </env>
+                                    <buildpacks>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/ca-certificates</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/bellsoft-liberica</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/syft</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/executable-jar</buildpack>
+                                        <buildpack>
+                                            paketobuildpacks/spring-boot:anthony-pr-571</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/environment-variables</buildpack>
+                                    </buildpacks>
+                                </image>
+                                <layers>
+                                    <enabled>true</enabled>
+                                </layers>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+        <profile>
+            <id>aot-aot-caching</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-maven-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <id>process-aot</id>
+                                    <goals>
+                                        <goal>process-aot</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <imageBuilder>
+                                    paketobuildpacks/builder-noble-java-tiny:latest</imageBuilder>
+                                <image>
+                                    <env>
+                                        <BP_JVM_VERSION>25</BP_JVM_VERSION>
+                                        <BP_JVM_AOTCACHE_ENABLED>true</BP_JVM_AOTCACHE_ENABLED>
+                                        <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
+                                        <JAVA_TOOL_OPTIONS>
+                                            -XX:+UseCompactObjectHeaders</JAVA_TOOL_OPTIONS>
+                                        <BPE_DELIM_JAVA_TOOL_OPTIONS
+                                            xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
+                                        <BPE_APPEND_JAVA_TOOL_OPTIONS>
+                                            -XX:+UseCompactObjectHeaders</BPE_APPEND_JAVA_TOOL_OPTIONS>
+                                    </env>
+                                    <buildpacks>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/ca-certificates</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/bellsoft-liberica</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/syft</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/executable-jar</buildpack>
+                                        <buildpack>
+                                            paketobuildpacks/spring-boot:anthony-pr-571</buildpack>
+                                        <buildpack>
+                                            urn:cnb:builder:paketo-buildpacks/environment-variables</buildpack>
+                                    </buildpacks>
+                                </image>
+                                <layers>
+                                    <enabled>true</enabled>
+                                </layers>
+                            </configuration>
                         </plugin>
                     </plugins>
                 </pluginManagement>
